--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
-    "file-loader": "^5.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "file-loader": "3.0.1",
+    "prop-types": "15.6.2",
+    "radium": "^0.25.1",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "webpack": "4.28.3",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14"
